# opencv-ffmpeg-rtmp-stream

./: CMakeLists.txt  LICENSE  README.md
include/: clipp.h
nginx-rtmp-server/: Dockerfile  nginx.conf
scripts/: install-opencv.sh
src/: rtmp-stream.cpp
